# fuzzpy

./: .gitignore  README.md  fuzzpy.numbers.trapezoidal.html  fuzzpy.numbers.triangular.html  genindex.html  numbers.html  pyproject.toml  searchindex.js  test.ipynb  usage.html
.doctrees/: environment.pickle  fuzzpy.numbers.fuzzy_number.doctree  fuzzpy.numbers.trapezoidal.doctree  fuzzpy.numbers.triangular.doctree  index.doctree  numbers.doctree  strucs.doctree  usage.doctree
.github/: copilot-instructions.md
.github/workflows/: docs.yml  types-and-tests.yml
_build/: index.html  objects.inv  searchindex.js  usage.html
_build/.doctrees/: environment.pickle  fuzzpy.numbers.fuzzy_number.doctree  fuzzpy.numbers.triangular.doctree  usage.doctree
_build/_sources/: fuzzpy.numbers.trapezoidal.rst.txt  usage.md.txt
_sources/: usage.md.txt
docs/: README.md
docs/source/: conf.py  fuzzpy.numbers.fuzzy_number.rst  index.rst  numbers.rst  strucs.rst  usage.md
fuzzpy/: README.md  pyproject.toml  test.ipynb
fuzzpy/.github/workflows/: docs.yml
fuzzpy/docs/: Makefile
fuzzpy/docs/source/: fuzzpy.numbers.triangular.rst  usage.md
fuzzpy/fuzzpy/: __init.py__  config.py
fuzzpy/fuzzpy/numbers/: fuzzy_number.py  trapezoidal.py  triangular.py
fuzzpy/fuzzpy/structs/: array.py
fuzzpy/numbers/: __init__.py  fuzzy_number.py  trapezoidal.py
fuzzpy/structs/: __init__.py  array.py
tests/: test_fuzzy_number.py  test_misc.py  test_trapezoidal.py  test_triangular.py
